--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
+    "eslint": "^8.14.0",
     "express": "^4.18.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
