--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "eslint": "^8.14.0",
-    "express": "^4.18.0",
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.5",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   }
