--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -30,6 +30,7 @@
     "sequelize": "^6.19.0"
   },
   "devDependencies": {
+    "jest": "^28.0.3",
     "nodemon": "^2.0.16"
   }
 }
